test(MAUI): Added workflow to dev branch
Added MAUI unit testing to merge requests to the dev branch

--- a/.github/workflows/maui-tests.yml
+++ b/.github/workflows/maui-tests.yml
@@ -6,9 +6,11 @@ on:
       - main
       - infra/runner-toevoegen
       - dev
+      - feature/*
   pull_request:
     branches:
       - main
+      - dev
  
 jobs:
   test:
